Commit pour CSS (1)

--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,353 @@
+@font-face {
+    font-family: 'Raleway-Medium';
+    src: url(../fonts/Raleway-Medium.ttf) format('truetype');
+}
 
+@font-face {
+    font-family: 'Raleway-bold';
+    src: url(../fonts/Raleway-Bold.ttf) format('truetype');
+}
+
+@font-face {
+    font-family: 'Raleway-ExtraBold';
+    src: url(../fonts/Raleway-ExtraBold.ttf) format('truetype');
+}
+
+@font-face {
+    font-family: 'Raleway-Light';
+    src: url(../fonts/Raleway-Light.ttf) format('truetype');
+}
+
+strong {
+    font-weight: bold;
+
+}
+
+.link h5,
+.cards h5,
+.header .headSignup,
+.submit__submitTxt,
+.filter span {
+    font-family: 'Raleway-bold', sans-serif;
+    font-size: 1.1em;
+}
+
+.headNav,
+.headNavLink1,
+.search_form .place input {
+    font-family: 'Raleway-Medium', sans-serif;
+    font-size: 1.15em;
+}
+
+.activity h3,
+.housingTitle,
+.pop .popTitle {
+    font-size: 1.2em;
+    font-family: 'Raleway-ExtraBold', sans-serif;
+}
+
+/*HEAD*/
+
+.header {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: auto 1fr auto auto;
+    grid-template-columns: auto 1fr auto auto;
+    text-align: center;
+    padding-bottom: 20px;
+    width: 90%;
+    margin: auto;
+}
+
+.headLogo {
+    width: 100px;
+    margin-top: 15px;
+    margin-bottom: 0;
+    cursor: pointer;
+}
+
+.headNav {
+    padding-top: 27px;
+    margin-top: 15px;
+    padding-left: 50px;
+    font-size: 1.1em;
+    -ms-grid-column: 3;
+    grid-column: 3;
+}
+
+.headNavLink1 {
+    border-top: solid 4px;
+    padding-top: 39px;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+.header .headNavLink2 {
+    text-decoration: none;
+    padding-top: 40px;
+    padding-left: 50px;
+    padding-right: 50px;
+    color: #000;
+    border-top: solid 4px transparent;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+}
+
+.header .headNavLink2:hover {
+    border-top: solid 4px;
+    padding-top: 40px;
+    color: #0065FC;
+}
+
+.header .headSignup {
+    padding-top: 43px;
+    padding-left: 15px;
+    padding-right: 15px;
+    -ms-grid-column: 4;
+    grid-column: 4;
+}
+
+/*SECTION N°1*/
+
+.title {
+    width: 90%;
+    margin-left: 50px;
+}
+
+.title h1 {
+    margin: 0;
+    font-family: 'Raleway-ExtraBold', sans-serif;
+    font-size: 1.4em;
+}
+
+.title h2 {
+    margin-top: 7px;
+    font-family: 'Raleway-Light', sans-serif;
+    font-size: 1em;
+}
+
+/*FORMULAIRE*/
+
+.search_form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+            align-items: center;
+    max-width: 450px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    margin-left: 45px;
+}
+
+.search_form .marker {
+    width: 55px;
+    height: 50px;
+    -webkit-border-top-left-radius: 17px;
+            border-top-left-radius: 17px;
+    -webkit-border-bottom-left-radius: 17px;
+            border-bottom-left-radius: 17px;
+    cursor: pointer;
+}
+
+.search_form .marker:hover img {
+    -webkit-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    transform: scale(1.3);
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+}
+
+.marker img {
+    width: 15px;
+    margin-left: 20px;
+    margin-right: 14px;
+    margin-top: 15px;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+}
+
+.search_form .place input {
+    position: relative;
+    border: solid #F2F2F2 2px;
+    height: 44px;
+    padding-left: 15px;
+    padding-right: 45px;
+    width: 150px;
+    outline: 0;
+}
+
+.search_form .submit {
+    position: absolute;
+    border: none;
+    color: #fff;
+    background-color: #0065FC;
+    -webkit-border-top-right-radius: 17px;
+            border-top-right-radius: 17px;
+    -webkit-border-bottom-right-radius: 17px;
+            border-bottom-right-radius: 17px;
+    padding-bottom: 15px;
+    height: 50px;
+    width: 125px;
+    margin-left: 245px;
+    opacity: 1;
+    cursor: pointer;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+    outline: 0;
+}
+
+.submit:hover {
+    background-color: #dfdfdf;
+}
+
+button .submit__submitTxt {
+    display: inline-block;
+    padding: 0;
+    margin-top: 13px;
+    -webkit-transition: 0.5s;
+    -o-transition: 0.5s;
+    transition: 0.5s;
+}
+
+.submit:hover .submit__submitTxt {
+    display: inline-block;
+    color: #0065FC;
+    -webkit-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    transform: scale(1.1);
+}
+
+.search_form button img {
+    width: 25px;
+    display: none;
+}
+
+/*SECTION N°2*/
+
+.filter {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -ms-flex-pack: distribute;
+    -webkit-justify-content: space-around;
+            justify-content: space-around;
+    -ms-flex-wrap: wrap;
+    -webkit-flex-wrap: wrap;
+            flex-wrap: wrap;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+            align-items: center;
+    margin-left: 25px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    max-width: 1000px;
+}
+
+.filter .choice {
+    border: solid #F2F2F2;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-border-radius: 30px;
+            border-radius: 30px;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+            align-items: center;
+    text-decoration: none;
+    height: 50px;
+    padding-right: 15px;
+    margin-right: 10px;
+    -webkit-box-shadow: inset 5px -5px 5px 1px #dfdfdf;
+    box-shadow: inset 5px -5px 5px 1px #dfdfdf;
+    -webkit-transition: 0.5s;
+    -o-transition: 0.5s;
+    transition: 0.5s;
+}
+
+.filter .choice img {
+    width: auto;
+    height: 17px;
+    margin-top: 16px;
+    color: #000;
+}
+
+.filter .choice .img {
+    width: 50px;
+    height: 50px;
+    -webkit-border-radius: 50%;
+            border-radius: 50%;
+    text-align: center;
+    margin-left: -7px;
+    background-color: #DEEBFF;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+    -webkit-box-shadow: inset 1px 1px 10px 5px #DEEBFF;
+    box-shadow: inset 1px 1px 10px 5px #DEEBFF;
+    border: solid 2px #DEEBFF;
+}
+
+.filter span {
+    font-size: 1em;
+    text-align: center;
+    color: #000;
+    margin-left: 20px;
+    margin-right: 15px;
+}
+
+.choice:hover .img {
+    -webkit-transform: scale(1.07);
+    -ms-transform: scale(1.07);
+    transform: scale(1.07);
+    -webkit-box-shadow: inset 1px 1px 10px 5px #fff;
+    box-shadow: inset 1px 1px 10px 5px #fff;
+    border: solid 2px #DEEBFF;
+}
+
+.choice:hover {
+    -webkit-box-shadow: inset -5px 5px 5px 1px #dfdfdf;
+    box-shadow: inset -5px 5px 5px 1px #dfdfdf;
+}
+
+/*SECTION N°3*/
+
+.info {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+            align-items: center;
+    margin-left: 43px;
+    margin-bottom: 25px;
+}
+
+.info img {
+    width: 10px;
+    height: 10px;
+    border: solid #F2F2F2 2px;
+    -webkit-border-radius: 50%;
+            border-radius: 50%;
+    padding: 4px;
+    margin-right: 5px;
+}
+
+.info h4 {
+    font-family: 'Raleway-light';
+    font-size: 0.8em;
+    margin-left: 5px;
+}
