--- a/style/index.css
+++ b/style/index.css
@@ -26,7 +26,7 @@ a {
   grid-area: navbar;
 }
 .headerNavLink {
-  padding: 2rem;
+  padding: 0.9rem;
   font-weight: 500;
   text-align: center;
   transition-duration: 0.1s;
@@ -166,6 +166,12 @@ a {
   color: rgb(0, 0, 0);
 }
 
+
+  input::placeholder {
+  color: rgb(0, 0, 0);
+}
+
+
   .submit {
   font-weight: bolder; 
   position: absolute;
@@ -206,7 +212,7 @@ button .submit__submitTxt {      /*-------------bouton "RECHERCHER" à changer s
 .submit:hover .submit__submitTxt {
   display: inline-block;
   color: #f1f1f1;
-  -webkit-transform: scale(1.1);
+  -webkit-transform: scale(1.1);      
   -ms-transform: scale(1.1);
   transform: scale(1.1);
 }
@@ -217,6 +223,12 @@ button .submit__submitTxt {      /*-------------bouton "RECHERCHER" à changer s
 }
 
 /*la FIN de FORMULAIRE de RECHERCHE----------------------------------------------------------*/
+
+
+
+.placeholder {
+color: black;
+}
 
 
 .searchFilters {
