--- a/index/index.css
+++ b/index/index.css
@@ -1,13 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700;800;900&display=swap");
-body {
-  font-family: "Raleway", "Sans serif";
-  margin: 0;
-}
+body{
+font-family: "Raleway", "Sans serif";
+  margin: 0;}
 
-a {
+a{
   color: inherit;
-  text-decoration: none;
-}
+  text-decoration: none;}
 
 .header {
   display: grid;
